<resources>
    <string name="app_name">Jakstrada</string>
    <string name="title_activity_maps">Map</string>
    <string name="login">Login</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="logout">Logout</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Beranda</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_track">Lacak</string>
    <string name="menu_trace">Histori Perjalanan</string>
    <string name="api_key">AIzaSyCVcZFTO-4QVQFKbvVsMUgbFrdjLUp1YR0</string>
    <string name="empty_lbl">Belum Ada Data!</string>
</resources>