<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.meivaldi.trackerapps.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_track"
        android:name="com.meivaldi.trackerapps.ui.track.TrackFragment"
        android:label="@string/menu_track"
        tools:layout="@layout/fragment_track" />

    <fragment
        android:id="@+id/nav_trace"
        android:name="com.meivaldi.trackerapps.ui.trace.TraceFragment"
        android:label="@string/menu_trace"
        tools:layout="@layout/fragment_trace" />
</navigation>